# iTEMPO_test

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  env.example  models_config.yaml  plan.md  pyproject.toml  pyrightconfig.json  run_all_bots.py  run_bot.py  run_max_bot.py  run_server.py  run_tg_bot.py  temp_migrate.py  temp_migrate_head.py
admin/: app.py
admin/static/: app.js  index.html  phonebook.html  style.css
data/: .ragignore  CONVENTIONS.md  README.md  contacts.7z  contacts.db  contacts_sync_state.json  index.md
data/it/: index.md  регламент.md
data/it_department/: index.md
data/itz/: index.md
data/kmk/: index.md
data/kzmk/: index.md
data/metiz/: index.md
data/ntz/: index.md
data/port/: index.md
data/shared/: index.md
data/sks/: index.md
docs/: ADMIN_PANEL.md  SMART_CHUNKER.md  VPN_SINGBOX.md  WEB_AD_SSO_SETUP.md  YANDEX_EMAIL_SYNC.md  cloudfare.md  max_documentation.md  server_docs.md
scratch/: ad_integration_original.md  all_metadata.json  check_scoring.py  check_scroll.py  count_qdrant_points.py  debug_latency.py  list_users_db.py  test_contact_search.py  test_logs_api.py  test_qdrant_filter.py  test_retry_options.py  test_sanitize.py  test_split.py  update_user_nick.py
scripts/: evaluate_rag.py  init_database.py  migrate_contacts_to_pg.py  migrate_contacts_to_qdrant.py  process_documents.py  start.sh  sync_yandex_emails.py  update_database.py  update_server_deps.sh  vpn_watchdog.sh
tests/: rag_eval.json  test_contact_hybrid_search.py  test_formatting.py  test_message_splitting.py
(+215 files in other folders)
