[project]
name = "ai-assistant-develop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.2.0",
    "fastapi>=0.110",
    "flet>=0.24",
    "google-genai>=0.6",
    "httpx[socks]>=0.26",
    "nltk>=3.8",
    "openpyxl>=3.1",
    "pillow>=12.1.1",
    "pydub>=0.25",
    "pyinstaller>=6.18.0",
    "pypdf2>=3.0",
    "pytest>=7.4",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "python-telegram-bot>=20.7",
    "pytz>=2024.1",
    "pyyaml>=6.0",
    "qdrant-client>=1.7",
    "rank-bm25>=0.2",
    "requests>=2.31",
    "requests-negotiate-sspi>=0.5.2 ; sys_platform == 'win32'",
    "static-ffmpeg>=2.5",
    "pymorphy3>=2.0.0",
    "pymorphy3-dicts-ru>=2.4.417127.4579844",
    "pysocks>=1.7.1",
    "uvicorn[standard]>=0.27",
    "cachetools>=7.0.5",
    "scikit-learn>=1.8.0",
    "rapidfuzz>=3.0",
    "asyncpg>=0.31.0",
    "python-socks>=2.8.1",
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "langgraph>=1.1.9",
    "python-multipart>=0.0.30",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]
